--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,208 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Wooder - Advanced Cutting Optimization Tool
+# Comprehensive .gitignore for Next.js/TypeScript/Cloudflare project
 
-# dependencies
+# ===== DEPENDENCIES =====
 /node_modules
 /.pnp
 .pnp.js
 .yarn/install-state.gz
+/.yarn/cache
+/.yarn/unplugged
+/.yarn/build-state.yml
+/.yarn/install-state.gz
+.pnpm-store/
 
-# testing
-/coverage
-
-# next.js
+# ===== NEXT.JS BUILD OUTPUTS =====
 /.next/
 /out/
-
-# production
+/dist/
 /build
 
-# misc
-.DS_Store
-*.pem
+# ===== DEVELOPMENT & TESTING =====
+/coverage
+/.nyc_output
+.jest-cache/
+/test-results/
+/playwright-report/
+/test-results/
+*.lcov
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
+# ===== TYPESCRIPT COMPILATION =====
 *.tsbuildinfo
 next-env.d.ts
+*.d.ts.map
+
+# ===== ENVIRONMENT & SECRETS =====
+.env
+.env*.local
+.env.development.local
+.env.test.local
+.env.production.local
+.dev.vars
+.dev.vars.*
+*.env
+.environment
+
+# ===== DEPLOYMENT PLATFORMS =====
+# Vercel
+.vercel
+.vercel/
+
+# Cloudflare
+.wrangler/
+wrangler.toml.bak
+worker-configuration.d.ts
 
 # OpenNext
 /.open-next
 
-# wrangler files
-.wrangler
-.dev.vars*
+# ===== MACOS & SYSTEM FILES =====
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+.AppleDouble
+.LSOverride
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# ===== IDE & EDITOR FILES =====
+.vscode/settings.json
+.vscode/launch.json
+.vscode/extensions.json
+.idea/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+*.sublime-project
+
+# ===== LOGS & DEBUGGING =====
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+*.log
+logs/
+*.pid
+*.seed
+*.pid.lock
+
+# ===== TEMPORARY & CACHE FILES =====
+.tmp/
+.temp/
+.cache/
+.parcel-cache/
+.eslintcache
+.stylelintcache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# ===== DATABASE & LOCAL STORAGE =====
+*.db
+*.sqlite
+*.sqlite3
+/db/*.db
+/database/*.db
+.data/
+
+# ===== CERTIFICATES & KEYS =====
+*.pem
+*.key
+*.cert
+*.crt
+*.p12
+*.pfx
+
+# ===== TEST & DEVELOPMENT FILES =====
+# Keep test files but ignore some generated content
+/test-results/
+/playwright-report/
+.nyc_output/
+
+# Ignore temporary test files that start with "test-" and have certain extensions
+test-*.mjs
+test-*.temp.js
+test-*.temp.ts
+
+# Ignore verification scripts that are temporary
+verify-*.sh
+verify-*.mjs
+
+# ===== BACKUP & VERSIONING FILES =====
+*.backup
+*.bak
+*.tmp
+*.orig
+*.rej
+*~
+*.swp
+*.swo
+
+# Files with .new extension (temporary/backup files)
+*.new
+
+# Files with .fixed extension (temporary fix files)
+*.fixed
+
+# ===== PROJECT-SPECIFIC EXCLUSIONS =====
+# Exclude HTML demo files that are for local testing only
+quantity-fix-demo.html
+test-cutting.html
+
+# Exclude analysis and debug files that are temporary
+analyze-*.js
+debug-*.js
+debug-*.test.js
+
+# Exclude any files that start with 'demo-' as they're likely temporary
+demo-*.js
+demo-*.ts
+demo-*.mjs
+
+# ===== PERFORMANCE & MONITORING =====
+.next/trace
+.next/server/
+.next/static/chunks/
+.next/cache/
+
+# ===== PACKAGE MANAGERS =====
+package-lock.json.bak
+yarn.lock.bak
+pnpm-lock.yaml.bak
+
+# ===== MISC =====
+.vscode-upload.json
+.history/
+.vscode/
+jsconfig.json.bak
+
+# ===== IMPORTANT: KEEP THESE FILES =====
+# Essential configuration files (override ignore patterns)
+!postcss.config.mjs
+!next.config.ts
+!tailwind.config.ts
+!jest.config.js
+
+# Keep legitimate test files in the tests directory
+!app/tests/**/*.ts
+!app/tests/**/*.js
+
+# Keep essential library files
+!app/lib/**/*.ts
+!app/lib/**/*.js
