--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
+		"test": "jest",
 		"deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
 		"preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
@@ -20,12 +21,15 @@
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20250507.0",
 		"@tailwindcss/postcss": "^4.1.7",
+		"@types/jest": "^29.5.14",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"autoprefixer": "^10.4.21",
+		"jest": "^29.7.0",
 		"postcss": "^8.5.3",
 		"tailwindcss": "^4.1.7",
+		"ts-jest": "^29.3.4",
 		"typescript": "^5",
 		"wrangler": "^4.14.1"
 	}
