--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"postcss": "^8.5.3",
 		"tailwindcss": "^4.1.7",
 		"ts-jest": "^29.3.4",
+		"ts-node": "^10.9.2",
 		"typescript": "^5",
 		"wrangler": "^4.14.1"
 	}
