Cleanup: Remove obsolete test files and scripts to streamline project structure
- Deleted multiple test files related to strip-cutting verification, UI fixes, efficiency scenarios, and user-specific tests.
- Removed temporary documentation and debugging scripts to enhance clarity.
- Cleaned up the app directory by eliminating redundant test directories and backup files.
- Consolidated essential tests, retaining only core functionality tests for better maintainability.
- Updated the project structure and documentation to reflect the changes made during the cleanup.

--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,34 @@ jsconfig.json.bak
 # Keep essential library files
 !app/lib/**/*.ts
 !app/lib/**/*.js
+
+# ===== PREVENT ACCUMULATION OF TEMPORARY FILES =====
+# Debugging and test files in root
+test-*.js
+test-*.mjs
+test-*.cjs
+test-*.ts
+test-*.html
+debug-*.js
+debug-*.ts
+demo-*.js
+demo-*.ts
+analyze-*.js
+quantity-*.js
+verify-*.sh
+verify-*.mjs
+
+# Backup and temporary files
+*.backup
+*.broken
+*.fixed
+*.new
+*.tmp
+
+# Temporary documentation
+*-COMPLETE.md
+*-complete.md
+MISSION-*.md
+
+# Build artifacts in wrong locations
+/build/
