--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
 	},
 	"dependencies": {
 		"@opennextjs/cloudflare": "^1.0.0",
+		"kld-intersections": "^0.7.0",
 		"next": "15.3.2",
+		"polygon-clipping": "^0.15.7",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"robust-predicates": "^3.0.2"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20250507.0",
