--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20250507.0",
 		"@tailwindcss/postcss": "^4.1.7",
+		"@types/jest": "^29.5.14",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
